--- a/fist.html
+++ b/fist.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
+	<meta charset="UTF-8">
     <title>Leap Motion Fist</title>
-    <script src="https://js.leapmotion.com/leap-0.6.2.js"></script>
+    <script src="leap-0.6.2.js"></script>
 </head>
 
 <body>
